<resources>
    <string name="gangneung_guesthous1">Gangneung Guesthouse 1</string>
    <string name="gangneung_guesthous2">Gangneung Guesthouse (Coffe street)</string>
    <string name="gangneung_guesthous3">Gangneung Guesthouse 2</string>
    <string name="gangneung_guesthous_add1">403\-3, Anhyeon-dong, Gangneung\-si, Gangwon\-do, Korea</string>
    <string name="gangneung_guesthous_add2">9\-1, Gyeonso-dong, Gangneung\-si, Gangwon\-do, Korea</string>
    <string name="gangneung_guesthous_add3">86\-39, Sacheonjin\-ri, Sacheon\-myeon, Gangneung\-si, Gangwon\-do, Korea</string>
    <string name="market_map_agelimit"><![CDATA[<b>age limit - </b>]]></string>
    <string name="market_map_bookingplace"><![CDATA[<b>booking place - </b>]]></string>
    <string name="market_map_discountinfofestival"><![CDATA[<b>discount info - </b>]]></string>
    <string name="market_map_eventenddate"><![CDATA[<b>end date - </b>]]></string>
    <string name="market_map_eventhomepage"><![CDATA[<b>homepage - </b>]]></string>
    <string name="market_map_eventplace"><![CDATA[<b>place - </b>]]></string>
    <string name="market_map_eventstartdate"><![CDATA[<b>start date - </b>]]></string>
    <string name="market_map_placeinfo"><![CDATA[<b>place info - </b>]]></string>
    <string name="market_map_playtime"><![CDATA[<b>time - </b>]]></string>
    <string name="market_map_program"><![CDATA[<b>program - </b>]]></string>
    <string name="market_map_spendtimefestival"><![CDATA[<b>running time - </b>]]></string>
    <string name="market_map_subevent"><![CDATA[<b>subevnet - </b>]]></string>
    <string name="market_map_usetimefestival"><![CDATA[<b>fee - </b>]]></string>
    <string name="market_map_overview">overview</string>
    <string name="market_map_intro">intro</string>
    <string name="network_check">Check network</string>
    <string name="network_error">Network error</string>
    <string name="actionbar_title_search">Search</string>
    <string name="actionbar_title_kozaza">Kozaza</string>
    <string name="actionbar_title_gangneung_guesthouse">Guesthouse</string>
    <string name="actionbar_title_chat">Chat</string>
    <string name="actionbar_title_setting_map">Zone setting</string>
    <string name="no_data">No data</string>
    <string name="search_accomdation_hint">search accommdation</string>
    <string name="login_pick_account">You must pick an account</string>
    <string name="set_your_visit">You must set an visit</string>
    <string name="time_0sec">0 sec</string>
    <string name="time_sec"> sec</string>
    <string name="time_min"> min</string>
    <string name="time_hour"> hour</string>
    <string name="short_text">too short</string>
    <string name="calendar_fine">Ok</string>
    <string name="calendar_bad">Set date</string>
    <string name="translate">Trans\n-late</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_caution">Are you sure you want to leave this chatroom?\nIf you leave, your data including the message history of this chatroom will be deleted.</string>
    <string name="edit_chatroom">Edit chatroom</string>
    <string name="edit_chatroom_done">done</string>
    <string name="logout">Log-out</string>
    <string name="logout_caution">Are you sure you want to log out?\nIf you log out, your data including the message history of this chatroom will be deleted.</string>
    <string name="untouch">1. Press Butto.n\n2. Press the plus button to search for accommdation.</string>
    <string name="sign_in_sub1">Let\'s get started! Your real local tour.</string>
    <string name="sign_in_step1">STEP 1</string>
    <string name="sign_in_step1_sub">Search your accommodations worldwide</string>
    <string name="sign_in_step2">STEP 2</string>
    <string name="sign_in_step2_sub">Enter your itinerary</string>
    <string name="sign_in_step3">STEP 3</string>
    <string name="sign_in_step3_sub">Enjoy chatting with your next door travelers</string>
    <string name="sign_in_sub2">Set the search zone yourself to connect\nwith other in-zone travelers</string>
    <string name="sign_in_sub3">Also, search most visited spots in your neighborhood Never miss where you\'re supposed to be</string>
    <string name="sign_in_sub4">Let’s Explore\nYour Real Local Tour with Guestbook</string>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="map_tab_newsfeed">Newsfeed</string>
    <string name="map_tab_search_people">Search</string>
    <string name="setting_map_done">Done</string>
    <string name="temperature">\u00B0</string>
    <string name="log_out">Log out</string>
    <string name="market_map">Market map</string>
    <string name="mytrips">My trips</string>
    <string name="configuration">Configuration</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="menu">Menu</string>
    <string name="main">Main</string>
    <string name="settings">Settings</string>
    <string name="setting_push">Push notifications</string>
    <string name="loading">Loading\.\.\.</string>
    <string name="term_done">OK</string>
    <string name="dialog_chat_1to1">1:1 chat</string>
    <string name="dialog_profile">Profile</string>
    <string name="calendar_set_not_yet">Set your visit day</string>
    <string name="calendar_set_done">Complete</string>
    <string name="calendar_done">Done</string>
    <string name="calendar_monday">M</string>
    <string name="calendar_tuesday">T</string>
    <string name="calendar_wednesday">W</string>
    <string name="calendar_thursday">T</string>
    <string name="calendar_friday">F</string>
    <string name="calendar_saturday">S</string>
    <string name="calendar_sunday">S</string>
    <string name="login_facebook">facebook</string>
    <string name="login_google">google</string>
    <string name="feed_refreshing">Refreshing</string>
    <string name="feed_refresh">Refresh</string>
    <string name="chatting">chatting</string>
    <string name="title_BookingListActivity_display_message">List</string>
    <string name="app_name">GuestBook</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="faceboook_app_id">223694251160718</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="facebook">facebook</string>
    <string name="under_today"><u>Today</u></string>
    <string name="under_checkin"><u>Checkin</u></string>
    <string name="booking_btn_accamodation">Accomodation</string>
    <string name="booking_btn_purpose">Purpose of visit</string>
    <string name="booking_btn_calendar">Itinetery</string>
    <string name="booking_pusrpose_vacation">Vacation</string>
    <string name="booking_pusrpose_business">Business</string>
    <string name="booking_pusrpose_convention">Convention</string>
    <string name="booking_pusrpose_visitRelatvie">Visit Relative</string>
    <string name="booking_pusrpose_individual">Individual</string>
    <string name="booking_pusrpose_couple">Couple</string>
    <string name="booking_pusrpose_family">Family</string>
    <string name="booking_pusrpose_group">Group</string>
    <string name="booking_pusrpose_attractions">Attraction</string>
    <string name="booking_pusrpose_local">Local F<![CDATA["&"]]>B</string>
    <string name="booking_pusrpose_entertainment">Entertainment</string>
    <string name="booking_pusrpose_love">Love</string>
    <string name="filtersFragment_filters">Filters</string>
    <string name="filtersFragment_TravelDates">Travel dates</string>
    <string name="filtersFragment_Arrives">Arrives</string>
    <string name="filtersFragment_Departs">Departs</string>
    <string name="filtersFragment_Guests">Guests</string>
    <string name="filtersFragment_priceRage">Price range</string>
    <string name="filtersFragment_advancedFilters">Advanced filters</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="no_search_data">no data</string>
    <string name="android_version_incompatible">Android version not compatible, %s needed.</string>
    <string name="accessibility_service_description">Allows GTalkSMS to send you a message for every notifications.</string>
    <string name="panel_buddies">Buddies</string>
    <string name="panel_buddies_add_hint">buddy@jabber.org</string>
    <string name="panel_buddies_add_button">Add</string>
    <string name="panel_buddies_add_message">Request sent!</string>
    <string name="panel_buddies_popup_button_delete_title">Confirmation</string>
    <string name="panel_buddies_popup_button_delete">%1$s will be removed from your buddy list.\n</string>
    <string name="panel_buddies_popup_button_invite">Send Invite</string>
    <string name="panel_buddies_popup_button_ok">OK</string>
    <string name="panel_buddies_popup_button_cancel">Cancel</string>
    <string name="panel_buddies_popup_button_name">Name:</string>
    <string name="panel_buddies_popup_button_user_id">User ID:</string>
    <string name="panel_commands">Commands</string>
    <string name="panel_commands_hint">cmd:subcmd:args</string>
    <string name="panel_help">Help / About</string>
    <string name="panel_connection">Connection</string>
    <string name="panel_connection_notif">Account:</string>
    <string name="panel_connection_notif_hint">notification@jabber.org</string>
    <string name="panel_connection_notif_help">This address will be used to interact with GTalkSMS from your computer.</string>
    <string name="panel_connection_login">Login:</string>
    <string name="panel_connection_login_hint">login@jabber.org</string>
    <string name="panel_connection_password">Password:</string>
    <string name="panel_connection_auto_connect">Auto connect:</string>
    <string name="panel_connection_button_connect">Connect</string>
    <string name="panel_connection_button_connecting">Connecting&#8230;</string>
    <string name="panel_connection_button_disconnect">Disconnect</string>
    <string name="panel_connection_button_disconnecting">Disconnecting&#8230;</string>
    <string name="panel_connection_button_waiting">Waiting&#8230;</string>
    <string name="panel_connection_status">Connection Status</string>
    <string name="panel_main_adfree_version">Remove ads</string>
    <string name="panel_main_paypal">Donate via Paypal</string>
    <string name="about_authors">Authors</string>
    <string name="about_change_log">Change Log</string>
    <string name="about_donate_string">Buying donate versions on market shows your appreciation for the app to the developers :) You can also give a donation with Paypal:\n</string>
    <string name="about_donate_market">\tDonate via Google Market\n\n</string>
    <string name="about_donate_paypal">\tDonate via Paypal\n</string>
    <string name="about_donors">Donors</string>
    <string name="about_help">\n\nIf you can\'t find yours answers on the website, don\'t hesitate to ask for help at:\n</string>
    <string name="about_panel">About GTalkSMS</string>
    <string name="about_rate_help">\nPlease rate the application on Google Market:\n\</string>
    <string name="about_rate">\tGTalkSMS on Google Market\n</string>
    <string name="about_rate_donate">\tGTalkSMS Donate on Google Market\n</string>
    <string name="about_website">Website</string>
    <string name="about_website_help">Visit the Website for help and bug list:\n</string>
</resources>