<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="291dp"
    android:layout_height="170dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_logout_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/logout_caution"
        android:textColor="@color/main_darkgray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dialog_logout_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/grayback_btn_seletor"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:visibility="visible" />

        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="match_parent" >
        </FrameLayout>

        <Button
            android:id="@+id/dialog_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/grayback_btn_seletor"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>