<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/booking_calen_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:id="@+id/booking_calendar_move_allow"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:background="@color/main_topbox_bg"
                android:gravity="center" >

                <ImageView
                    android:id="@+id/booking_confirm_lastMonth"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right|center_vertical"
                    android:paddingBottom="30dp"
                    android:paddingLeft="33dp"
                    android:paddingRight="15dp"
                    android:paddingTop="30dp"
                    android:src="@drawable/accommodation_arrow_l" />

                <TextView
                    android:id="@+id/booking_confirm_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/booking_confirm_nextMonth"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:paddingBottom="30dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="33dp"
                    android:paddingTop="30dp"
                    android:src="@drawable/accommodation_arrow_r" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_monday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_monday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_tuesday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_wednesday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_thursday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_friday"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/calendar_sunday"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <GridView
                android:id="@+id/booking_confirm_gridView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:numColumns="7"
                android:stretchMode="columnWidth" >
            </GridView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/booking_calendar_tv_helper"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/calendar_bg_period"
                android:gravity="center"
                android:text="@string/calendar_set_not_yet"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/booking_calendar_btn_apply"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/main_search_btn_seletor"
                android:text="@string/calendar_done"
                android:textColor="@color/white"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>